--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,10 +30,10 @@ def computeVersionName() {
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.0"
+    buildToolsVersion "23.0.1"
 
     defaultConfig {
-        applicationId "com.samsao.projecttemplate"
+        applicationId "com.oyeoye.consumer"
         minSdkVersion 16
         targetSdkVersion 23
         versionCode System.env.BUILD_NUMBER ? "$System.env.BUILD_NUMBER".toInteger() : 9999999
@@ -109,7 +109,7 @@ dependencies {
     def android_support_library_version = '23.0.0'
     def dagger_version = '2.0.1'
     def jackson_version = '2.6.1'
-    def architect_version = '0.15-SNAPSHOT'
+    def architect_version = '0.16-SNAPSHOT'
 
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:' + android_support_library_version
