--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.samsao.projecttemplate" >
+    package="com.oyeoye.consumer" >
 
     <application
         android:allowBackup="true"
-        android:name=".MainApplication"
+        android:name=".App"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".RootActivity"
+            android:name="com.oyeoye.consumer.RootActivity"
             android:launchMode="singleInstance"
             android:label="@string/app_name" >
             <intent-filter>
