--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,7 +34,7 @@ android {
 
     defaultConfig {
         applicationId "com.oyeoye.consumer"
-        minSdkVersion 16
+        minSdkVersion 21
         targetSdkVersion 23
         versionCode System.env.BUILD_NUMBER ? "$System.env.BUILD_NUMBER".toInteger() : 9999999
         versionName computeVersionName()
@@ -112,6 +112,7 @@ dependencies {
     def architect_version = '0.16-SNAPSHOT'
 
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.android.support:recyclerview-v7:' + android_support_library_version
     compile 'com.android.support:appcompat-v7:' + android_support_library_version
     compile 'com.android.support:design:' + android_support_library_version
     compile 'com.squareup.mortar:mortar:0.19'
@@ -135,6 +136,10 @@ dependencies {
     apt 'org.parceler:parceler:1.0.3'
 
     compile('com.crashlytics.sdk.android:crashlytics:2.5.2@aar') {
+        transitive = true;
+    }
+
+    compile('com.digits.sdk.android:digits:1.8.0@aar') {
         transitive = true;
     }
 }
