--- a/app/build.gradle
+++ b/app/build.gradle
@@ -112,6 +112,8 @@ dependencies {
     def architect_version = '0.16-SNAPSHOT'
 
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile project(':libs:masterpass')
+
     compile 'com.android.support:recyclerview-v7:' + android_support_library_version
     compile 'com.android.support:appcompat-v7:' + android_support_library_version
     compile 'com.android.support:design:' + android_support_library_version
@@ -142,4 +144,13 @@ dependencies {
     compile('com.digits.sdk.android:digits:1.8.0@aar') {
         transitive = true;
     }
+
+    compile 'pl.charmas.android:android-reactive-location:0.7@aar'
+    compile 'io.reactivex:rxjava:1.0.13'
+
+    compile 'com.squareup.retrofit:retrofit:1.9.0'
+    compile 'com.squareup.okhttp:okhttp:2.4.0'
+    compile 'com.squareup.picasso:picasso:2.5.2'
+
+    compile 'com.simplify:sdk-android:1.0.2'
 }
