--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,7 @@ buildscript {
 apply plugin: 'com.android.application'
 apply plugin: 'com.neenbedankt.android-apt'
 apply plugin: 'io.fabric'
+apply plugin: 'com.google.gms.google-services'
 
 repositories {
     maven { url 'https://maven.fabric.io/public' }
@@ -153,4 +154,5 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
 
     compile 'com.simplify:sdk-android:1.0.2'
+    compile 'com.google.android.gms:play-services-gcm:8.1.0'
 }
