--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ buildscript {
         classpath 'com.github.ben-manes:gradle-versions-plugin:0.11.3'
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.7'
         classpath 'io.fabric.tools:gradle:1.+'
+        classpath 'com.google.gms:google-services:1.4.0-beta3'
     }
 }
 
