--- a/app/build.gradle
+++ b/app/build.gradle
@@ -113,7 +113,6 @@ dependencies {
     def architect_version = '0.16-SNAPSHOT'
 
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile project(':libs:masterpass')
 
     compile 'com.android.support:recyclerview-v7:' + android_support_library_version
     compile 'com.android.support:appcompat-v7:' + android_support_library_version
@@ -153,6 +152,6 @@ dependencies {
     compile 'com.squareup.okhttp:okhttp:2.4.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
 
-    compile 'com.simplify:sdk-android:1.0.2'
+    compile 'com.simplify:simplify-android:2.0.1'
     compile 'com.google.android.gms:play-services-gcm:8.1.0'
 }
